Header nav list  alignment fixed

--- a/easy-read.css
+++ b/easy-read.css
@@ -48,9 +48,8 @@ ul {
     padding: 0.3rem 0.6rem;
     margin: 0.2rem 0.1rem;
     background-color: #DDD;
-    /* border: 2px solid; */
     border-radius: 10px;
-    display: inline-block;
+    /* display: inline-block; Not needed? */
 }
 .unavailable {
     color: #EEE;
@@ -94,7 +93,7 @@ ul {
 }
 #header-nav {
     display: flex;
-    align-self: center;
+    align-items: flex-end;
     flex-direction: column;
 }
 #header-nav-list {
@@ -186,7 +185,7 @@ article img {
     - Expand navigation*/
 @media (min-width: 40rem) {
     #header-nav {
-        align-items: center;
+        align-self: center;
     }
     #header-nav-list {
         display: flex;
